--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="about-image">
               <div class="image-container">
                 <img
-                  src="images/c48.jpg"
+                  src="images/salem.jpg"
                   alt="Ma photo de profil"
                   width="400"
                   height="400"
@@ -148,6 +148,10 @@
                 <div class="detail-item">
                   <i class="fas fa-graduation-cap"></i>
                   <span>Bac Systèmes Informatiques et Numériques (2020)</span>
+                </div>
+                <div class="detail-item">
+                  <i class="fas fa-graduation-cap"></i>
+                  <span>BEP Éléctrotechnique (2005)</span>
                 </div>
                 <div class="detail-item">
                   <i class="fas fa-briefcase"></i>
@@ -400,17 +404,18 @@
             <div class="project-card">
               <div class="project-image">
                 <img
-                  src="https://via.placeholder.com/600x400"
+                  src="images/Capture d'écran w124.png"
                   alt="Projet 3"
                   width="600"
                   height="400"
                 />
               </div>
               <div class="project-content">
-                <h3>Projet 3</h3>
+                <h3>Projet w124</h3>
                 <p>
-                  Description du projet 3. Utilisez cet espace pour décrire
-                  votre projet.
+                  Ce projet est un site web dédié à la Mercedes W124, présentant
+                  son histoire, sa timeline et diverses informations sur ce
+                  modèle emblématique.
                 </p>
                 <div class="project-tech">
                   <span class="tech-tag">HTML</span>
@@ -422,7 +427,7 @@
                     ><i class="fas fa-eye"></i> Voir</a
                   >
                   <a
-                    href="https://github.com/IsaacTwad"
+                    href="https://github.com/IsaacTwad/w124.git"
                     class="btn btn-small"
                     aria-label="Code source"
                     target="_blank"
@@ -550,10 +555,7 @@
           &copy; <span id="year">2024</span> - Bougjdi Salem. Tous droits
           réservés.
         </p>
-        <p>
-          Conçu et développé avec
-          <i class="fas fa-heart" aria-hidden="true"></i>
-        </p>
+        <p></p>
       </div>
     </footer>
 
